:bug: fix: totally hide dropdown scrollbar

--- a/src/compositions/Dropdown/styles/Dropdown.module.css
+++ b/src/compositions/Dropdown/styles/Dropdown.module.css
@@ -179,7 +179,7 @@
  *    is hidden.
  */
 .dropdownOptions {
-  @mixin addXSmallScrollbar var(--dropdown-options-scrollbar-thumb-color);
+  @mixin addScrollbar transparent, transparent, 0, 0, 0, 0;
 
   border-radius: inherit;
   margin-top: -1px; /* [1] */
@@ -241,7 +241,6 @@
     --dropdown-options-contained-box-shadow: $theme-box-shadow-0;
     --dropdown-options-contained-border-color: $theme-primary-palette-border-color;
     --dropdown-options-raised-box-shadow: $theme-box-shadow-0;
-    --dropdown-options-scrollbar-thumb-color: transparent;
   }
 }
 
@@ -252,7 +251,6 @@
     --dropdown-options-contained-box-shadow: $theme-box-shadow-0;
     --dropdown-options-contained-border-color: $theme-contrast-palette-text-color;
     --dropdown-options-raised-box-shadow: $theme-box-shadow-0;
-    --dropdown-options-scrollbar-thumb-color: transparent;
   }
 
   &.dropdown--light {
